<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_signInParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        tools:context=".activity.LoginActivity">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="113dp"
            android:layout_marginTop="50dp"

            android:layout_marginEnd="113dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_logo_perpar" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp">

            <EditText
                android:id="@+id/edt_UserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:hint="@string/email"
                android:inputType="textWebEmailAddress"

                android:textAppearance="?android:textAppearanceSmall">

                <requestFocus />
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_PasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edt_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/password"
                android:inputType="textWebPassword"
                android:nextFocusDown="@+id/edt_UserEmail"
                android:textAlignment="viewStart"
                android:textAppearance="?android:textAppearanceSmall" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_ForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:onClick="openForgotPasswordActivity"
            android:text="@string/forgetPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_Signin"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_btn1_bg"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_Signup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_btn"
            android:onClick="signUp"
            android:text="@string/signUp"
            android:textColor="@color/colorPrimary" />


        <TextView
            android:id="@+id/txt_signin_as_guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:layout_marginBottom="30dp"
            android:onClick="gotToHome"
            android:text="@string/signin_as_guest"
            android:textColor="@android:color/black"
            android:textSize="18sp" />



    </LinearLayout>

</ScrollView>
