<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddAdFragment">
    <!--start of appBarContainer-->
    <RelativeLayout
        android:id="@+id/BarContainer"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"

        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/appbar_title"
            android:layout_width="wrap_content"
            android:layout_toEndOf="@+id/iv_back"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/addAdd"
            android:textColor="@android:color/white"

            android:textSize="25sp" />
        <ImageView
            android:id="@+id/ic_brand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/cocon_nextarabiclight_0"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:src="@drawable/ic_arrow_back"


            />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/BarContainer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/gray"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingStart="14dp"
                android:text="@string/productInfo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"

                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingStart="14dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"

                    android:text="@string/productPhotos"
                    android:textColor="@color/mainTextColor"
                    android:textSize="15sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_report"
                        android:layout_width="90dp"
                        android:layout_height="95dp"
                        android:scaleType="fitXY"
                        android:background="@drawable/white_border"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_openCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@+id/iv_report"
                        android:background="@drawable/white_border"
                        android:drawableTop="@drawable/ic_add_blue"
                        android:drawablePadding="12dp"
                        android:paddingStart="14dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="14dp"
                        android:paddingBottom="20dp"
                        android:text="@string/addPhoto"
                        android:textColor="@color/colorPrimary" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="18dp"
                    android:background="@color/darkerGray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:text="@string/productDetails"
                    android:textColor="@color/mainTextColor"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/edt_productName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/title"

                    android:textColor="@color/mainTextColor" />


                <Spinner
                    android:id="@+id/sp_categories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp" />
                <View
                    android:id="@+id/view_addAd"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="6dp"

                    android:background="@color/darkerGray"/>

                <EditText
                    android:id="@+id/edt_productDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/description"
                    android:textColor="@color/mainTextColor" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="14dp"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/advertiser_info"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingStart="14dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">


                <EditText
                    android:id="@+id/edt_storeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"
                    android:hint="@string/name"

                    android:textColor="@color/mainTextColor" />




                <EditText
                    android:id="@+id/edt_storeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginBottom="4dp"

                    android:hint="@string/email"
                    android:textColor="@color/mainTextColor" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/shape_purple_top_tweenty_redius"
                android:text="@string/addAdd"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>